Adding coordinates to the map

--- a/_notebooks/2023-10-23-23-Map_Test_In_HTML.html
+++ b/_notebooks/2023-10-23-23-Map_Test_In_HTML.html
@@ -3,25 +3,25 @@
 <head>
     <style>
         #game-container {
-            position: absolute;
+            position: relative;
             width: 1200px;
             height: 600px;
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/d7/Del_norte_wiki.png/640px-Del_norte_wiki.png');
             background-size: cover;
-    }
+        }
         #target {
-            position: relative;
+            position: absolute;
             width: 20px;
             height: 20px;
             background-color: red;
             border-radius: 50%;
             cursor: pointer;
-    }
+        }
         #score {
             position: absolute;
             top: 10px;
             right: 10px;
-    }
+        }
     </style>
 </head>
 <body>
@@ -35,15 +35,27 @@
         const scoreDisplay = document.getElementById("score");
         let score = 0;
         let dotClicked = false;
+
+        // Define specific coordinates where the red dot can appear
+        const specificCoordinates = [
+            { x: 230, y: 420 },
+            { x: 359, y: 489 },
+            // Add more coordinates as needed
+        ];
+
         function moveTarget() {
-            const maxWidth = gameContainer.clientWidth - target.clientWidth;
-            const maxHeight = gameContainer.clientHeight - target.clientHeight;
-            const randomX = Math.random() * maxWidth;
-            const randomY = Math.random() * maxHeight;
-            target.style.left = randomX + "px";
-            target.style.top = randomY + "px";
+            const randomIndex = Math.floor(Math.random() * specificCoordinates.length);
+            const { x, y } = specificCoordinates[randomIndex];
+
+            // Check if the specified coordinates are within the visible area
+            const maxX = gameContainer.clientWidth - target.clientWidth;
+            const maxY = gameContainer.clientHeight - target.clientHeight;
+
+            target.style.left = Math.min(x, maxX) + "px";
+            target.style.top = Math.min(y, maxY) + "px";
             dotClicked = false; // Reset the dotClicked flag
         }
+
         target.addEventListener("click", () => {
             if (!dotClicked) {
                 const earnedPoints = 1; // You always get 1 point for clicking on the dot
@@ -54,6 +66,7 @@
                 moveTarget();
             }
         });
+
         gameContainer.addEventListener("click", () => {
             if (!dotClicked) {
                 // You get 0 points if you click anywhere in the game container except the red dot
@@ -61,6 +74,7 @@
                 moveTarget();
             }
         });
+
         moveTarget();
     </script>
 </body>
