--- a/_notebooks/2023-10-23-23-Map_Test_In_HTML.html
+++ b/_notebooks/2023-10-23-23-Map_Test_In_HTML.html
@@ -44,7 +44,7 @@
             //add more coordinates once we get more pictures
         ];
 
-        let lastRandomIndex = -1;
+        let lastRandomIndex = parseInt(localStorage.getItem('lastRandomIndex')) || specificCoordinates.length;
         //Changes position of button and button won't appear same place twice (for the most part)
         function moveTarget() {
             let randomIndex;
@@ -52,6 +52,9 @@
             do {
                 randomIndex = Math.floor(Math.random() * specificCoordinates.length);
             } while (randomIndex === lastRandomIndex);
+
+            // Update the lastRandomIndex in localStorage
+            localStorage.setItem('lastRandomIndex', randomIndex.toString());
             
             const { x, y } = specificCoordinates[randomIndex];
 
