no more both messages pop up

--- a/_notebooks/2023-10-23-23-Map_Test_In_HTML.html
+++ b/_notebooks/2023-10-23-23-Map_Test_In_HTML.html
@@ -75,6 +75,8 @@
                 alert(`You got ${earnedPoints} point!`); // Display pop-up message
                 dotClicked = true; // Set the flag to true
                 moveTarget();
+                //stop the event propagation
+                event.stopPropagation();
             }
         });
 
