Made the dot more transparent
We realized in ordeer for the game to work at a more optimal level we  need the dot to be transparent but not completely transparent for testing purposes so I made it transparent with 50% opacity. I also got rid of a few redundant notebooksk

--- a/mapgame.html
+++ b/mapgame.html
@@ -40,7 +40,7 @@
             position: absolute;
             width: 20px;
             height: 20px;
-            background-color: red;
+            background-color: rgba(0, 0, 255, 0.5); /* Transparent blue color with 50% opacity */
             border-radius: 50%;
             cursor: pointer;
         }
