--- a/_posts/2023-10-23-Map_Test_In_HTML.html
+++ b/_posts/2023-10-23-Map_Test_In_HTML.html
@@ -14,7 +14,7 @@
             position: absolute;
             width: 20px;
             height: 20px;
-            background-color: red;
+            background-color: blue;
             border-radius: 50%;
             cursor: pointer;
         }
