--- a/mapgame.html
+++ b/mapgame.html
@@ -50,8 +50,8 @@
 
         #score {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            width: 800px;
+            height: 800px;
         }
         
         /* Styles for the navbar */
