--- a/_posts/2023-10-23-Map_Test_In_HTML.html
+++ b/_posts/2023-10-23-Map_Test_In_HTML.html
@@ -192,4 +192,34 @@
 
     </script>
 </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Digital Clock</title>
+</head>
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Digital Clock</title>
+</head>
+
+<body>
+    <div class="clock">
+        <div id="time"></div>
+    </div>
+    <script src="script.js"></script>
+</body>
+
+</html>
+
+
 </html>
