Made it bigger, also got transparency working
Was able to make the dot a lot larger and got it transparent.

--- a/mapgame.html
+++ b/mapgame.html
@@ -44,9 +44,9 @@
         }
         #target {
             position: absolute;
-            width: 70px;
-            height: 70px;
-            background-color: rgba(0, 0, 255, 0.5); /* Transparent blue color with 50% opacity */
+            width: 100px; /* Set the width to 100px (or any value you prefer) */
+            height: 100px; /* Set the height to 100px (or any value you prefer) */
+            background-color: rgba(0, 0, 255, 0.5); /* Fully transparent blue color (0% opacity) */
             border-radius: 50%;
             cursor: pointer;
         }
