--- a/mapgame.html
+++ b/mapgame.html
@@ -88,7 +88,7 @@
             <a href="#menu" class="w3-bar-item w3-button">RULES</a>
             <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
             <a href="#myMap" class="w3-bar-item w3-button">CONTACT</a>
-            <div>Registration closes in <span id="time">05:00</span> minutes!</div>
+            <div>Game ends in <span id="time">05:00</span> minutes!</div>
         </div>
     </div>
 
@@ -206,6 +206,11 @@
         }
     }, 1000);
         }
+        window.onload = function () {
+    var fiveMinutes = 60 * 5,
+        display = document.querySelector('#time');
+    startTimer(fiveMinutes, display);
+};
 
         
     </script>
