--- a/mapgame.html
+++ b/mapgame.html
@@ -204,6 +204,10 @@
         if (--timer < 0) {
             timer = duration;
         }
+        if(timer ==0 ){
+            
+        
+        }
     }, 1000);
         }
         window.onload = function () {
