--- a/mapgame.html
+++ b/mapgame.html
@@ -88,9 +88,9 @@
             <a href="#menu" class="w3-bar-item w3-button">RULES</a>
             <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
             <a href="#myMap" class="w3-bar-item w3-button">CONTACT</a>
-            <div id="safeTimer">
-                <h2>Game Timer</h2>
-                <p id="safeTimerDisplay">00:30</p>
+            <div id="gameTimer">
+                <h2>Time Remaining</h2>
+                <p id="gameTimerDisplay">01:00</p>
                 </div>
         </div>
     </div>
@@ -199,22 +199,26 @@
         minutes = parseInt(timer / 60, 10)
         seconds = parseInt(timer % 60, 10);
 
-        minutes = minutes < 10 ? "0" + minutes : minutes;
-        seconds = seconds < 10 ? "0" + seconds : seconds;
+        minutes = minutes < 10 ? "0" + minutes : minutes; //calculates the minutes left
+        seconds = seconds < 10 ? "0" + seconds : seconds; // calculates second left
 
-        display.textContent = minutes + ":" + seconds;
+        display.textContent = minutes + ":" + seconds; //displays the time left
 
         if (--timer < 0) {
             timer = 0;
-            // timer = duration; // uncomment this line to reset timer automatically after reaching 0
+        }
+        if(timer==0){
+            alert("GAME OVER") //alerts when the game is over
+            window.location.href = 'https://rliao569.github.io/Frontend-CSP/';
         }
     }, 1000);
 }
 
-window.onload = function () {
-    var time = 60 / 2, // your time in seconds here
-        display = document.querySelector('#safeTimerDisplay');
-    startTimer(time, display);
+window.onload = function () { //calls the method when the window is opened
+    var time = 60 / 2, // time in seconds
+        display = document.querySelector('#gameTimerDisplay');
+    startTimer(time, display); //display
+    
 };
 
         
