--- a/mapgame.html
+++ b/mapgame.html
@@ -13,6 +13,7 @@
             background-color: black; /* Dark background color */
             color: white; /* Text color */
             font-family: "Amatic SC", sans-serif;
+            overflow: hidden;
         }
         .menu {
             display: none;
@@ -45,9 +46,8 @@
         #target {
             position: absolute;
             width: 100px; /* Set the width to 100px (or any value you prefer) */
-            width: 70px;
             height: 70px;
-            background-color: rgba(0, 0, 255, 0); /* Transparent blue color with 50% opacity */
+            background-color: rgba(0, 0, 255, 0.5); /* Transparent blue color with 50% opacity */
             border-radius: 50%;
             cursor: pointer;
         }
